# herald

./: .env.example  .gitignore  Cargo.toml  README.md
crates/herald-adapters/: Cargo.toml
crates/herald-adapters/src/: activity_analyzer.rs  ai.rs  lib.rs  storage.rs
crates/herald-adapters/src/ai/: claude.rs  gemini.rs
crates/herald-adapters/src/capture/: macos.rs  mod.rs
crates/herald-cli/: Cargo.toml
crates/herald-cli/src/: app.rs  main.rs
crates/herald-cli/src/commands/: activity.rs  capture.rs  daemon.rs  displays.rs  mod.rs  status.rs  suggest.rs
crates/herald-cli/tests/: e2e_tests.rs
crates/herald-core/: Cargo.toml
crates/herald-core/src/: activity_scheduler.rs  api_key.rs  config.rs  daemon.rs  directory.rs  error.rs  exporter.rs  lib.rs  logging.rs  ports.rs  prompt.rs  retention.rs  scheduler.rs
crates/herald-core/src/ports/: activity.rs  ai.rs  capture.rs  storage.rs
