[workspace]
resolver = "2"
members = [
    "crates/herald-core",
    "crates/herald-adapters",
    "crates/herald-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["Herald Contributors"]
license = "MIT"
repository = "https://github.com/herald/herald"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Error handling
anyhow = "1"
thiserror = "1"

# Async traits
async-trait = "0.1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# CLI
clap = { version = "4", features = ["derive"] }

# Utilities
dirs = "5"
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }

# Database
rusqlite = { version = "0.31", features = ["bundled"] }
tokio-rusqlite = "0.5"

# Screen capture (macOS)
screencapturekit = "1.5"

# Image processing
image = { version = "0.25", default-features = false, features = ["png"] }
png = "0.17"

# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Base64 encoding
base64 = "0.22"

# Internal crates
herald-core = { path = "crates/herald-core" }
herald-adapters = { path = "crates/herald-adapters" }

[profile.release]
lto = true
codegen-units = 1
strip = true
